--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta charset="utf-8">
 
+
+
 	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
 	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
@@ -122,6 +124,7 @@
 	</div>
 	
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
+	<script type="text/javascript" src="js/translation.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
