--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	</div>
 	
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
-	<script type="text/javascript" src="js/translation.js"></script>
+	<script type="text/javascript" src="scripts/translation.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
